# AML_NN_SDK

./: README.md
Linux/Demo/image_classify/: CMakeLists.txt  main.cpp
Linux/examples/: CMakeLists.txt  make_nnsdk_linux_32.sh  make_nnsdk_linux_64.sh  readme.txt
Linux/examples/cmake/: arm32_toolchain.cmake  arm64_toolchain.cmake
Linux/examples/demo/: CMakeLists.txt
Linux/examples/demo/face_age/: CMakeLists.txt  aml_face_age_32  aml_face_age_64  face_age.h  face_age_postprocess.c  main.cpp  readme.txt  util.c
Linux/examples/demo/face_age/package/: face_age_88_A311D.nb  face_age_be_C305X.nb
Linux/examples/demo/face_compare/: CMakeLists.txt  aml_face_compare_32  aml_face_compare_64  face_compare.h  face_compare_postprocess.c  main.cpp  readme.txt
Linux/examples/demo/face_compare/package/: face_input.nb
Linux/examples/demo/face_detection/: CMakeLists.txt  aml_face_det_32  aml_face_det_64  face_detection.h  face_detection_postprocess.c  main.cpp  readme.txt
Linux/examples/demo/face_detection/package/: face_detect_a1_C308X.nb  face_detect_be_C305X.nb
Linux/examples/demo/face_emotion/: CMakeLists.txt  aml_face_emotion_32  aml_face_emotion_64  face_emotion.h  face_emotion_postprocess.c  main.cpp  readme.txt  util.c
Linux/examples/demo/face_emotion/package/: emotion_88_A311D.nb  emotion_a1_C308X.nb
Linux/examples/demo/face_gender/: CMakeLists.txt  aml_face_gender_32  aml_face_gender_64  face_gender.h  face_gender_postprocess.c  main.cpp  readme.txt
Linux/examples/demo/face_landmark5/: CMakeLists.txt  aml_face_land5_32  aml_face_land5_64  face_landmark5.h  face_landmark5_postprocess.c  main.cpp  readme.txt
Linux/examples/demo/face_landmark5/package/: face_detect_88_A311D.nb
Linux/examples/demo/face_landmark68/: CMakeLists.txt  aml_face_land68_32  aml_face_land68_64  face_landmark68.h  face_landmark68_postprocess.c  main.cpp  readme.txt
Linux/examples/demo/face_landmark68/package/: face_landmark_68_88_A311D.nb  (+1 more)
Linux/examples/demo/face_recognize/: CMakeLists.txt  aml_face_recog_32  aml_face_recog_64  face_recognize.h  face_recognize_postprocess.c  main.cpp  readme.txt
Linux/examples/demo/face_rfb_det/: CMakeLists.txt  aml_face_rfb_32  aml_face_rfb_64  face_rfb_det.h  face_rfb_det_postprocess.c  main.cpp  readme.txt
Linux/examples/demo/head_detection/: CMakeLists.txt  aml_head_det_32  aml_head_det_64  head_detection.h  head_detection_postprocess.c  main.cpp  readme.txt
Linux/examples/demo/image_classify/: CMakeLists.txt  aml_image_cls_32  aml_image_cls_64  main.cpp  postprocess_classify.c  readme.txt
Linux/examples/demo/image_segmentation/: CMakeLists.txt  aml_image_seg_32  aml_image_seg_64  image_segmentation.h  image_segmentation_postprocess.c  main.cpp  readme.txt
Linux/examples/demo/object_detect/: CMakeLists.txt  aml_obj_det_32  aml_obj_det_64  main.cpp  postprocess_yolov2.c  readme.txt  yolov2.h
Linux/examples/include/: nn_util.h
(+321 files in other folders)
